--- a/frontend/src/component/auth/auth.css
+++ b/frontend/src/component/auth/auth.css
@@ -1,5 +1,5 @@
 .authForm {
-  width: 300px;
+  max-width: 300px;
   margin: 0 auto;
   padding: 20px;
 }
@@ -35,7 +35,8 @@
 
 .authForm .error {
   color: var(--danger);
-  font-size: 0.8em;
+  font-size: 0.8rem;
+  margin-bottom: 10px;
 }
 
 .authForm .loginRegisterLink {
